[gd_scene load_steps=6 format=3 uid="uid://bd6hvyj4335ye"]

[ext_resource type="Script" path="res://scenes/menu/go_in.gd" id="1_fm2vx"]
[ext_resource type="Texture2D" uid="uid://dpthky7yki0m2" path="res://models/menu/on_off.png" id="2_hmhtg"]
[ext_resource type="AudioStream" uid="uid://c5fgxh51yhon8" path="res://ressources/sounds/menu/Microsoft Windows 98 Startup Sound .mp3" id="3_ekahx"]

[sub_resource type="Animation" id="Animation_ojx4i"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fade/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_afckh"]
_data = {
"fade_in": SubResource("Animation_ojx4i")
}

[node name="GoIn" type="Node2D"]
script = ExtResource("1_fm2vx")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1604.0
offset_bottom = 897.0
texture = ExtResource("2_hmhtg")
expand_mode = 1

[node name="on_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ekahx")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="fade" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_afckh")
}

[node name="ColorRect" type="ColorRect" parent="fade"]
self_modulate = Color(1, 1, 1, 0)
offset_right = 1625.0
offset_bottom = 914.0
color = Color(0, 0, 0, 1)

[connection signal="finished" from="on_sound" to="." method="_on_on_sound_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
